--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 :root {
 	--black: #000000;
 	--gray: #484848d3;
-    --light-gray: #99999980;
+	--light-gray: #99999980;
 }
 
 @font-face {
@@ -9,36 +9,33 @@
 	src: url('./fonts/RobotoMono/RobotoMono-VariableFont_wght.ttf');
 }
 
-::-webkit-scrollbar-track
-{
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 	border-radius: 10px;
-	background-color: #F5F5F5;
+	background-color: #f5f5f5;
 }
 
-::-webkit-scrollbar
-{
+::-webkit-scrollbar {
 	width: 12px;
-	background-color: #F5F5F5;
+	background-color: #f5f5f5;
 }
 
-::-webkit-scrollbar-thumb
-{
+::-webkit-scrollbar-thumb {
 	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 	background-color: #404040;
 }
 
 html {
 	width: 300px;
-    height: 200px;
+	height: 200px;
 }
 
-body{
-    border-radius: 10px;
-    padding: 1em;
-    padding-bottom: .5em;
-    margin: 0;
+body {
+	border-radius: 10px;
+	padding: 1em;
+	padding-bottom: 0.5em;
+	margin: 0;
 }
 
 h1 {
@@ -46,30 +43,28 @@ h1 {
 	font-weight: 700;
 	font-size: 1.5rem;
 	margin-bottom: 1em;
-    margin-top: 0;
-    text-align: center;
+	margin-top: 0;
+	text-align: center;
 }
 
 .prices {
 	font-family: RobotoMono;
 	color: var(--black);
-    display: block;
-    height: 200px;
-    max-height: 200px;
-    overflow-y: scroll;
+	display: block;
+	height: 200px;
+	max-height: 200px;
+	overflow-y: scroll;
 }
 
 .product-box {
-	border-bottom:  var(--light-gray) 1px dashed;
+	border-bottom: var(--light-gray) 1px dashed;
 	margin-bottom: 1em;
-    display: block;
-    margin-right: 1em;
+	display: block;
+	margin-right: 1em;
 }
 
-.product-box:last-child{
-
-    border-bottom: none;
-
+.product-box:last-child {
+	border-bottom: none;
 }
 
 .product-name {
@@ -87,19 +82,34 @@ h1 {
 	transition: color 0.25s, font-weight 0.25s, text-decoration 0.5s;
 }
 
-.product-price {
-	font-weight: 700;
+.product-priceBox{
+
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+
 }
 
-footer{
+.product-removeBtn{
 
-    font-family: RobotoMono;
-    font-size: .6rem;
-    font-weight: 300;
-    text-align: center;
-    color: var(--gray);
-    margin-top: 2em;
-    margin-bottom: 0;
-    border-top: solid var(--black) 1px;
-    padding: 0;
+	margin: 1em;
+	padding: 0 .5em;
+
+}
+
+.product-price {
+	font-weight: 700;
+	flex: 1;
+}
+
+footer {
+	font-family: RobotoMono;
+	font-size: 0.6rem;
+	font-weight: 300;
+	text-align: center;
+	color: var(--gray);
+	margin-top: 2em;
+	margin-bottom: 0;
+	border-top: solid var(--black) 1px;
+	padding: 0;
 }
