--- a/content.css
+++ b/content.css
@@ -15,17 +15,19 @@
 	font-family: 'Roboto Mono', monospace;
 	width: fit-content;
 	text-align: center;
+	cursor: pointer;
 }
 
-.addToListBtn:not(.warning):hover {
+.addToListBtn:not(.added):hover {
 	background-color: white;
 	color: black;
 	border: 1px solid black;
 	transition: 1s;
 }
 
-.addToListBtn.warning {
+.addToListBtn.added {
 	transition: 1s;
 	background-color: rgb(22, 157, 22);
+	cursor: default;
 }
 
