--- a/main.css
+++ b/main.css
@@ -79,6 +79,7 @@ h1 {
 	cursor: pointer;
 	transition: color 0.5s, font-weight 0s, text-decoration 1s;
 	font-weight: 400;
+	margin:0;
 }
 
 .product-name:hover {
@@ -94,6 +95,7 @@ h1 {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
+	margin: 0;
 
 }
 
